Implement buildHomePage() and test